--- a/index.html
+++ b/index.html
@@ -19,6 +19,14 @@
                 <li><a href="gallery.html">Gallery</a></li>
             </ul>
         </nav>
+        <section id="info">
+            <h1>Thông tin cá nhân</h1>
+            <img src="img/avatar.jpg" alt="Ảnh đại diện" width="200">
+            <p><strong>Họ tên:</strong> Phạm Nhật Khoa</p>
+            <p><strong>Email:</strong> pnk1622005@gmail.com</p>
+            <p><strong>SĐT:</strong> 0936741521</p>
+            <p><strong>Địa chỉ:</strong> Bcons Plaza, 22A/6 Đ. Thống Nhất, Đông Hoà, Dĩ An, Bình Dương</p>
+        </section>
 
         <footer>
             <p>© 2025 - CV Cá Nhân</p>
