--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         </nav>
         <section id="info">
             <h1>Thông tin cá nhân</h1>
-            <img src="img/avatar.jpg" alt="Ảnh đại diện" width="200">
+            <img src="img/avatar.jpg" alt="Ảnh đại diện" width="200" height="200" style="border-radius: 50%; border: 2px solid black;">
             <p><strong>Họ tên:</strong> Phạm Nhật Khoa</p>
             <p><strong>Email:</strong> pnk1622005@gmail.com</p>
             <p><strong>SĐT:</strong> 0936741521</p>
