--- a/duan.html
+++ b/duan.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>CV Cá Nhân</title>
+        <title>Dự Án Đã Tham Dự</title>
     </head>
     <body>
         <!-- Navbar -->
@@ -19,6 +19,39 @@
                 <li><a href="gallery.html">Gallery</a></li>
             </ul>
         </nav>
+        <section id="projects">
+            <h1>Dự án đã tham gia</h1>
+            <div class="project">
+                <h3>Hệ thống bán vé xem phim</h3>
+                <p>Mô tả: Xây dựng hệ thống quản lý rạp phim và bán vé xem
+                    phim.</p>
+                <p>Vai trò: Frontend Developer, Backend Developer, Database
+                    Developer, Tester</p>
+                <p>Công nghệ: JAVA, ORACLE SQL</p>
+                <a href="https://github.com/Khoa0216/DoAn_HQTCSDL"
+                    target="_blank">Xem chi
+                    tiết</a>
+            </div>
+
+            <div class="project">
+                <h3>Website cá nhân</h3>
+                <p>Mô tả: Xây dựng website cá nhân.</p>
+                <p>Vai trò: Frontend Developer</p>
+                <p>Công nghệ: HTML, CSS, JS</p>
+                <a href="https://github.com/Khoa0216/Khoa0216.github.io" target="_blank">Xem chi
+                    tiết</a>
+            </div>
+
+            <div class="project">
+                <h3>Website bán hàng (chưa có)</h3>
+                <p>Mô tả: Xây dựng website thương mại điện tử.</p>
+                <p>Vai trò: Frontend Developer</p>
+                <p>Công nghệ: HTML, CSS, JS</p>
+                <a href="https://www.youtube.com/watch?v=xvFZjo5PgG0&list=RDxvFZjo5PgG0&start_radio=1" target="_blank">Xem chi
+                    tiết</a>
+            </div>
+        </section>
+
         <footer>
             <p>© 2025 - CV Cá Nhân</p>
         </footer>
