--- a/gallery.html
+++ b/gallery.html
@@ -19,6 +19,54 @@
                 <li><a href="gallery.html">Gallery</a></li>
             </ul>
         </nav>
+
+        <section id="gallery-section">
+            <h1>Gallery kỷ niệm</h1>
+
+            <!-- Grid ảnh -->
+            <div class="gallery-grid" aria-label="Gallery kỷ niệm">
+                <!-- Thay src/alt/caption theo ảnh của bạn -->
+                <figure class="gallery-item">
+                    <img src="img/anh1.JPG"
+                        alt="Kỷ niệm 1 - Hội Khỏe Phù Đổng Lớp 10 Cấp 3" loading="lazy"
+                        data-caption="Mưa Hội Khỏe Phù Đổng" />
+                    <figcaption>Mưa Hội Khỏe Phù Đổng</figcaption>
+                </figure>
+
+                <figure class="gallery-item">
+                    <img src="img/anh2.JPG"
+                        alt="Kỷ niệm 2 - Học Quân Sự Năm Nhất Đại Học" loading="lazy"
+                        data-caption="Học Quân Sự" />
+                    <figcaption>Học Quân Sự</figcaption>
+                </figure>
+
+                <figure class="gallery-item">
+                    <img src="img/anh3.JPG"
+                        alt="Kỷ niệm 3 - Đường Sách Q1 TP.HCM 2023" loading="lazy"
+                        data-caption="Năm Nhất Vào TP.HCM" />
+                    <figcaption>Năm Nhất Vào TP.HCM</figcaption>
+                </figure>
+
+                <figure class="gallery-item">
+                    <img src="img/anh4.JPG" alt="Kỷ niệm 4 - Lớp Thực Hành Nhập Môn Lập Trình 2023"
+                        loading="lazy" data-caption="Năm Nhất Đại Học" />
+                    <figcaption>Năm Nhất Đại Học</figcaption>
+                </figure>
+
+                <figure class="gallery-item">
+                    <img src="img/anh5.PNG" alt="Kỷ niệm 5 - Tết Dương Lịch 2024 Với Best Friends"
+                        loading="lazy" data-caption="Tết Dương Lịch 2024" />
+                    <figcaption>Tết Dương Lịch 2024</figcaption>
+                </figure>
+
+                <figure class="gallery-item">
+                    <img src="img/anh6.JPG" alt="Kỷ niệm 6 - Tết Âm Lịch 2025 Với Bạn Cấp 3"
+                        loading="lazy" data-caption="Họp Lớp Đầu Năm" />
+                    <figcaption>Họp Lớp Đầu Năm"</figcaption>
+                </figure>
+                
+            </div>
+        </section>
         <footer>
             <p>© 2025 - CV Cá Nhân</p>
         </footer>
