--- a/kinhnghiem.html
+++ b/kinhnghiem.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>CV Cá Nhân</title>
+        <title>Kinh Nghiệm</title>
     </head>
     <body>
         <!-- Navbar -->
@@ -19,6 +19,13 @@
                 <li><a href="gallery.html">Gallery</a></li>
             </ul>
         </nav>
+        <section id="experience">
+            <h1>Kinh nghiệm học tập</h1>
+            <ul>
+                <li><strong>2020 - 2023:</strong> Học sinh trường THPT chuyên Lê Thánh Tông - Hội An, Đà Nẵng</li>
+                <li><strong>2023 - nay:</strong> Sinh viên ngành Hệ Thống Thông Tin trường đại học Công Nghệ Thông Tin (UIT) - TP.HCM</li>
+            </ul>
+        </section>
         <footer>
             <p>© 2025 - CV Cá Nhân</p>
         </footer>
