--- a/sach.html
+++ b/sach.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>CV Cá Nhân</title>
+        <title>Sách Yêu Thích</title>
     </head>
     <body>
         <!-- Navbar -->
@@ -19,6 +19,56 @@
                 <li><a href="gallery.html">Gallery</a></li>
             </ul>
         </nav>
+
+        <section id="books">
+            <h1>Sách yêu thích</h1>
+            <div class="book-list">
+                <div class="book">
+                    <img src="img/bogiwan.jpg"
+                        alt="Bìa Bogiwan – Quỷ săn người">
+                    <h3>Bogiwan – Quỷ săn người</h3>
+                    <p><em>Tác giả:</em> Sawamura Ichi</p>
+                    <p class="review">Bogiwan – Quỷ Săn Người là tác phẩm của
+                        tác giả Sawamura Ichi, và đã được vinh danh bằng giải
+                        thưởng Tiểu thuyết Kinh dị Nhật Bản năm 2015. Cuốn sách
+                        kể về câu chuyện của một gia đình trốn chạy con quỷ
+                        bogiwan, loài quỷ săn người nơi sơn dã, duy trì nòi
+                        giống bằng cách bắt người về núi.</p>
+                </div>
+
+                <div class="book">
+                    <img src="img/harrypotter.jpg"
+                        alt="Bìa sách Harry Potter và Hòn Đá Phù Thủy">
+                    <h3>Harry Potter</h3>
+                    <p><em>Tác giả:</em> J.K. Rowling</p>
+                    <p class="review">Harry Potter, một cậu bé sống trong thế
+                        giới phù thủy, nơi mà những điều kỳ diệu diễn ra hàng
+                        ngày. Tại Trường Phù thủy Hogwarts, Harry và những người
+                        bạn của mình phải đối mặt với Voldemort, một phù thủy
+                        hắc ám có tham vọng bá chủ thế giới. Bộ truyện không chỉ
+                        mang đến những cuộc phiêu lưu hấp dẫn mà còn truyền tải
+                        những thông điệp về tình bạn, lòng dũng cảm và sự hy
+                        sinh.
+                    </p>
+                </div>
+
+                <div class="book">
+                    <img src="img/tetolangdianguc.jpg"
+                        alt="Bìa sách Tết Ở Làng Địa Ngục">
+                    <h3>Tết Ở Làng Địa Ngục</h3>
+                    <p><em>Tác giả:</em> Thảo Trang</p>
+                    <p class="review">Bối cảnh của câu chuyện là một ngôi làng
+                        hoang vu trên một ngọn núi xa xôi, nơi mà người dân sống
+                        trong sợ hãi và bí ẩn. Đón Tết trong không khí ám ảnh,
+                        họ không dám ra khỏi làng vì sợ họ là hậu duệ của những
+                        tội phạm khét tiếng. Tuy nhiên, điều kinh hoàng nhất đã
+                        xảy ra khi một báo mộng đã báo hiệu cho ông Thập – người
+                        duy nhất có thể ra khỏi làng và bảo vệ người dân. Câu
+                        chuyện này không chỉ là một câu chuyện kinh dị đơn thuần
+                        mà còn được dựa trên lịch sử và văn hoá Việt Nam.</p>
+                </div>
+            </div>
+        </section>
         <footer>
             <p>© 2025 - CV Cá Nhân</p>
         </footer>
