--- a/sothich.html
+++ b/sothich.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>CV Cá Nhân</title>
+        <title>Sở Thích</title>
     </head>
     <body>
         <!-- Navbar -->
@@ -19,6 +19,41 @@
                 <li><a href="gallery.html">Gallery</a></li>
             </ul>
         </nav>
+        <section id="hobbies">
+            <h1>Sở thích</h1>
+
+            <div>
+                <p>🎞️ Xem phim</p>
+                <p>Xem phim vào cuối tuần để thư giãn. Những thể loại yêu thích
+                    là: viễn tưởng, kinh dị, chiến tranh.</p>
+            </div>
+
+            <div>
+                <p>🎵 Nghe nhạc</p>
+                <p>Âm nhạc giúp tập trung khi làm việc, học tập và tạo cảm hứng
+                    sáng tạo.</p>
+            </div>
+
+            <div>
+                <p>🎮 Chơi điện tử</p>
+                <p>Chơi mobile game để giải trí, tập luyện phản xạ và khả năng
+                    chiến thuật. Thể loại yêu thích: MOBA. Tựa game yêu thích:
+                    Arena Of Varlor.</p>
+            </div>
+
+            <div>
+                <p>💻 Lập trình</p>
+                <p>Khám phá công nghệ mới, xây dựng các dự án nhỏ để nâng cao kỹ
+                    năng và giải quyết vấn đề.</p>
+            </div>
+
+            <div>
+                <p>📰 Đọc báo</p>
+                <p>Đọc báo mỗi ngày để cập nhật tin tức, theo dõi xu hướng công
+                    nghệ và đời sống.</p>
+            </div>
+        </section>
+
         <footer>
             <p>© 2025 - CV Cá Nhân</p>
         </footer>
