--- a/chungchi.html
+++ b/chungchi.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>CV Cá Nhân</title>
+        <title>Chứng Chỉ</title>
     </head>
     <body>
         <!-- Navbar -->
@@ -19,6 +19,30 @@
                 <li><a href="gallery.html">Gallery</a></li>
             </ul>
         </nav>
+
+        <section id="certificates">
+            <h1>Các chứng chỉ đã đạt được</h1>
+            <div class="cert-list">
+
+                <div class="cert">
+                    <img src="img/L-R.JPG"
+                        alt="Chứng chỉ TOEIC Nghe - Đọc">
+                    <h3>TOEIC Listening & Reading</h3>
+                    <p><strong>Đơn vị cấp:</strong> IIG Việt Nam</p>
+                    <p><strong>Thời gian:</strong> 02/05/2025</p>
+                </div>
+
+                <div class="cert">
+                    <img src="img/S-W.JPG"
+                        alt="Chứng chỉ TOEIC Nói - Viết">
+                    <h3>TOEIC Speaking & Writing</h3>
+                    <p><strong>Đơn vị cấp:</strong> IIG Việt Nam</p>
+                    <p><strong>Thời gian:</strong> 04/06/2025</p>
+                </div>
+
+            </div>
+        </section>
+
         <footer>
             <p>© 2025 - CV Cá Nhân</p>
         </footer>
