--- a/themanh.html
+++ b/themanh.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>CV Cá Nhân</title>
+        <title>Thế Mạnh</title>
     </head>
     <body>
         <!-- Navbar -->
@@ -19,6 +19,38 @@
                 <li><a href="gallery.html">Gallery</a></li>
             </ul>
         </nav>
+
+        <section id="skills">
+            <h1>Thế mạnh</h1>
+
+            <h2>Kỹ năng cứng</h2>
+            <div class="skill">
+                <span>Lập trình Web</span>
+                <progress value="60" max="100"></progress> 60%
+            </div>
+            <div class="skill">
+                <span>SQL & Database</span>
+                <progress value="85" max="100"></progress> 85%
+            </div>
+            <div class="skill">
+                <span>Tiếng Anh (TOEIC)</span>
+                <progress value="70" max="100"></progress> 70%
+            </div>
+
+            <h2>Kỹ năng mềm</h2>
+            <div class="skill">
+                <span>Kỹ năng giao tiếp</span>
+                <progress value="70" max="100"></progress> 70%
+            </div>
+            <div class="skill">
+                <span>Teamwork</span>
+                <progress value="85" max="100"></progress> 85%
+            </div>
+            <div class="skill">
+                <span>Quản lý thời gian</span>
+                <progress value="85" max="100"></progress> 85%
+            </div>
+        </section>
         <footer>
             <p>© 2025 - CV Cá Nhân</p>
         </footer>
