--- a/sothich.html
+++ b/sothich.html
@@ -4,6 +4,7 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Sở Thích</title>
+        <link rel="stylesheet" href="CSS/style.css">
     </head>
     <body>
         <!-- Navbar -->
@@ -22,35 +23,51 @@
         <section id="hobbies">
             <h1>Sở thích</h1>
 
-            <div>
-                <p>🎞️ Xem phim</p>
-                <p>Xem phim vào cuối tuần để thư giãn. Những thể loại yêu thích
-                    là: viễn tưởng, kinh dị, chiến tranh.</p>
-            </div>
+            <!-- Container -->
+            <div class="hobby-list">
 
-            <div>
-                <p>🎵 Nghe nhạc</p>
-                <p>Âm nhạc giúp tập trung khi làm việc, học tập và tạo cảm hứng
-                    sáng tạo.</p>
-            </div>
+                <!-- Card 1 -->
+                <div class="hobby-card">
+                    <h3>🎞️ Xem phim</h3>
+                    <p>Xem phim vào cuối tuần để thư giãn. Những thể loại yêu
+                        thích
+                        là: viễn tưởng, kinh dị, chiến tranh.</p>
+                </div>
 
-            <div>
-                <p>🎮 Chơi điện tử</p>
-                <p>Chơi mobile game để giải trí, tập luyện phản xạ và khả năng
-                    chiến thuật. Thể loại yêu thích: MOBA. Tựa game yêu thích:
-                    Arena Of Varlor.</p>
-            </div>
+                <!-- Card 2 -->
+                <div class="hobby-card">
+                    <h3>🎵 Nghe nhạc</h3>
+                    <p>Âm nhạc giúp tập trung khi làm việc, học tập và tạo cảm
+                        hứng
+                        sáng tạo.</p>
+                </div>
 
-            <div>
-                <p>💻 Lập trình</p>
-                <p>Khám phá công nghệ mới, xây dựng các dự án nhỏ để nâng cao kỹ
-                    năng và giải quyết vấn đề.</p>
-            </div>
+                <!-- Card 3 -->
+                <div class="hobby-card">
+                    <h3>🎮 Chơi điện tử</h3>
+                    <p>Chơi mobile game để giải trí, tập luyện phản xạ và khả
+                        năng
+                        chiến thuật. Thể loại yêu thích: MOBA. Tựa game yêu
+                        thích:
+                        Arena Of Valor.</p>
+                </div>
 
-            <div>
-                <p>📰 Đọc báo</p>
-                <p>Đọc báo mỗi ngày để cập nhật tin tức, theo dõi xu hướng công
-                    nghệ và đời sống.</p>
+                <!-- Card 4 -->
+                <div class="hobby-card">
+                    <h3>💻 Lập trình</h3>
+                    <p>Khám phá công nghệ mới, xây dựng các dự án nhỏ để nâng
+                        cao kỹ
+                        năng và giải quyết vấn đề.</p>
+                </div>
+
+                <!-- Card 5 -->
+                <div class="hobby-card">
+                    <h3>📰 Đọc báo</h3>
+                    <p>Đọc báo mỗi ngày để cập nhật tin tức, theo dõi xu hướng
+                        công
+                        nghệ và đời sống.</p>
+                </div>
+
             </div>
         </section>
 
