--- a/themanh.html
+++ b/themanh.html
@@ -4,6 +4,7 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Thế Mạnh</title>
+        <link rel="stylesheet" href="CSS/style.css">
     </head>
     <body>
         <!-- Navbar -->
@@ -23,34 +24,43 @@
         <section id="skills">
             <h1>Thế mạnh</h1>
 
-            <h2>Kỹ năng cứng</h2>
-            <div class="skill">
-                <span>Lập trình Web</span>
-                <progress value="60" max="100"></progress> 60%
-            </div>
-            <div class="skill">
-                <span>SQL & Database</span>
-                <progress value="85" max="100"></progress> 85%
-            </div>
-            <div class="skill">
-                <span>Tiếng Anh (TOEIC)</span>
-                <progress value="70" max="100"></progress> 70%
-            </div>
+            <div class="skills-container">
+                <!-- Kỹ năng cứng -->
+                <div class="skills-column">
+                    <h2>Kỹ năng cứng</h2>
+                    <div class="skill">
+                        <span>Lập trình Web</span>
+                        <progress value="60" max="100"></progress> 60%
+                    </div>
+                    <div class="skill">
+                        <span>SQL & Database</span>
+                        <progress value="85" max="100"></progress> 85%
+                    </div>
+                    <div class="skill">
+                        <span>Tiếng Anh (TOEIC)</span>
+                        <progress value="70" max="100"></progress> 70%
+                    </div>
+                </div>
 
-            <h2>Kỹ năng mềm</h2>
-            <div class="skill">
-                <span>Kỹ năng giao tiếp</span>
-                <progress value="70" max="100"></progress> 70%
-            </div>
-            <div class="skill">
-                <span>Teamwork</span>
-                <progress value="85" max="100"></progress> 85%
-            </div>
-            <div class="skill">
-                <span>Quản lý thời gian</span>
-                <progress value="85" max="100"></progress> 85%
+                <!-- Kỹ năng mềm -->
+                <div class="skills-column">
+                    <h2>Kỹ năng mềm</h2>
+                    <div class="skill">
+                        <span>Kỹ năng giao tiếp</span>
+                        <progress value="70" max="100"></progress> 70%
+                    </div>
+                    <div class="skill">
+                        <span>Teamwork</span>
+                        <progress value="85" max="100"></progress> 85%
+                    </div>
+                    <div class="skill">
+                        <span>Quản lý thời gian</span>
+                        <progress value="85" max="100"></progress> 85%
+                    </div>
+                </div>
             </div>
         </section>
+
         <footer>
             <p>© 2025 - CV Cá Nhân</p>
         </footer>
