--- a/index.html
+++ b/index.html
@@ -22,11 +22,25 @@
         </nav>
         <section id="info">
             <h1>Thông tin cá nhân</h1>
-            <img src="img/avatar.jpg" alt="Ảnh đại diện" width="200" height="200" style="border-radius: 50%; border: 2px solid black;">
+            <img src="img/avatar.jpg" alt="Ảnh đại diện" width="200"
+                height="200"
+                style="border-radius: 50%; border: 2px solid black;">
             <p><strong>Họ tên:</strong> Phạm Nhật Khoa</p>
+            <p><strong>Ngày sinh:</strong> 16/02/2005</p>
             <p><strong>Email:</strong> pnk1622005@gmail.com</p>
             <p><strong>SĐT:</strong> 0936741521</p>
-            <p><strong>Địa chỉ:</strong> Bcons Plaza, 22A/6 Đ. Thống Nhất, Đông Hoà, Dĩ An, Bình Dương</p>
+            <p><strong>Địa chỉ:</strong> Bcons Plaza, 22A/6 Đ. Thống Nhất, Đông
+                Hoà, Dĩ An, Bình Dương</p>
+            <p><strong>Trường Đại học:</strong> Trường Đại học Công Nghệ Thông
+                Tin - ĐHQG TP.HCM</p>
+            <p><strong>Facebook:</strong>
+                <a href="https://www.facebook.com/pham.khoa.865417/"
+                    target="_blank">facebook.com/Pham_Nhat_Khoa</a>
+            </p>
+            <p><strong>Instagram:</strong>
+                <a href="https://www.instagram.com/teaa025/"
+                    target="_blank">@teaa025</a>
+            </p>
         </section>
 
         <footer>
