--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
             <p><strong>SĐT:</strong> 0936741521</p>
             <p><strong>Địa chỉ:</strong> Bcons Plaza, 22A/6 Đ. Thống Nhất, Đông
                 Hoà, Dĩ An, Bình Dương</p>
+            <p><strong>Quê quán:</strong> Hội An - Đà Nẵng</p>
             <p><strong>Trường Đại học:</strong> Trường Đại học Công Nghệ Thông
                 Tin - ĐHQG TP.HCM</p>
             <p><strong>Facebook:</strong>
