--- a/gallery.html
+++ b/gallery.html
@@ -69,7 +69,7 @@
                     <img src="img/anh6.JPG"
                         alt="Kỷ niệm 6 - Tết Âm Lịch 2025 Với Bạn Cấp 3"
                         loading="lazy" data-caption="Họp Lớp Đầu Năm" />
-                    <figcaption>Họp Lớp Đầu Năm"</figcaption>
+                    <figcaption>Họp Lớp Đầu Năm</figcaption>
                 </figure>
             </div>
         </section>
