--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!-- <!DOCTYPE html>
 <html lang="vi">
     <head>
         <meta charset="UTF-8">
@@ -7,7 +7,7 @@
         <link rel="stylesheet" href="CSS/style.css">
     </head>
     <body>
-        <!-- Navbar -->
+       
         <nav>
             <ul>
                 <li><a href="index.html">Info</a></li>
@@ -47,5 +47,49 @@
         <footer>
             <p>© 2025 - CV Cá Nhân</p>
         </footer>
+    </body>
+</html> -->
+
+<!DOCTYPE html>
+<html lang="en">
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>Document</title>
+    </head>
+    <body>
+        <table border="1">
+            <tr>
+                <th rowspan="2" colspan="2">Student</th>
+                <th colspan="4">Exam</th>
+                <th colspan="4">2nd Exam</th>
+                <th rowspan="2" colspan="2">Final Grade</th>
+            </tr>
+
+            <tr>
+                <th>Q1</th>
+                <th>Q2</th>
+                <th>Q3</th>
+                <th rowspan="2">Grade</th>
+                <th>Q1</th>
+                <th>Q2</th>
+                <th>Q3</th>
+                <th rowspan="2">Grade</th>
+            </tr>
+
+            <tr>
+                <th>Code</th>
+                <th>Name</th>
+                <td>8</td>
+                <td>7</td>
+                <td>5</td>
+                <td>6</td>
+                <td>7</td>
+                <td>8</td>
+                <th>NR</th>
+                <th>R</th>
+            </tr>
+
+        </table>
     </body>
 </html>
