--- a/index.html
+++ b/index.html
@@ -51,45 +51,245 @@
 </html> -->
 
 <!DOCTYPE html>
-<html lang="en">
+<html lang="vi">
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Document</title>
+        <title>Thời Khóa Biểu</title>
+        <style>
+            body {
+                font-family: Arial, sans-serif;
+                background-color: #f9f9f9;
+            }
+            table {
+                border-collapse: collapse; /* gộp viền lại */
+                width: 80%;
+                margin: 20px auto; /* căn giữa bảng */
+                background-color: white;
+                box-shadow: 0 0 10px rgba(0,0,0,0.2);
+            }
+            th, td {
+                border: 1px solid #333;
+                padding: 10px;
+                text-align: center; 
+            }   
+            th {
+                background-color: #d9dcd6;
+                color: black;
+                font-weight: bold;
+            }
+            tr:nth-child(even) {
+                background-color: #f2f2f2;
+            }
+            td[rowspan] {
+                background-color: #f9f9f9;
+            }
+            h1 {
+                text-align: center;
+                color: #333;
+            }
+        </style>
     </head>
     <body>
-        <table border="1">
+        <h1> Thời Khóa Biểu Học Kỳ 1 Năm 2025-2026</h1>
+        <table>
             <tr>
-                <th rowspan="2" colspan="2">Student</th>
-                <th colspan="4">Exam</th>
-                <th colspan="4">2nd Exam</th>
-                <th rowspan="2" colspan="2">Final Grade</th>
+                <th>Thứ / Tiết</th>
+                <th>Thứ 2</th>
+                <th>Thứ 3</th>
+                <th>Thứ 4</th>
+                <th>Thứ 5</th>
+                <th>Thứ 6</th>
+                <th>Thứ 7</th>
             </tr>
 
             <tr>
-                <th>Q1</th>
-                <th>Q2</th>
-                <th>Q3</th>
-                <th rowspan="2">Grade</th>
-                <th>Q1</th>
-                <th>Q2</th>
-                <th>Q3</th>
-                <th rowspan="2">Grade</th>
+                <td style="font-weight: bold;">
+                    Tiết 1 <br>
+                    (7:30 - 8:15)
+                </td>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td rowspan="4">
+                    IS403.Q11 - VN <br>
+                    Sĩ số: 77 <br>
+                    Phân tích dữ liệu kinh doanh <br>
+                    P B3.12 <br>
+                    BĐ:08/09/25 <br>
+                    KT:29/11/25
+                </td>
+                <td rowspan="2">
+                    SS009.Q13 - VN <br>
+                    Sĩ số: 137 <br>
+                    Chủ nghĩa xã hội khoa học <br>
+                    P B3.14 <br>
+                    BĐ:08/09/25 <br>
+                    KT:27/12/25
+                </td>
+                <td rowspan="4">
+                    IS207.Q13 - VN <br>
+                    Sĩ số: 89 <br>
+                    Phát triển ứng dụng web <br>
+                    P B4.18 <br>
+                    BĐ:08/09/25 <br>
+                    KT:29/11/25
+                </td>
             </tr>
 
             <tr>
-                <th>Code</th>
-                <th>Name</th>
-                <td>8</td>
-                <td>7</td>
-                <td>5</td>
-                <td>6</td>
-                <td>7</td>
-                <td>8</td>
-                <th>NR</th>
-                <th>R</th>
+                <td style="font-weight: bold;">
+                    Tiết 2 <br>
+                    (8:15 - 9:00)
+                </td>
+                <td></td>
+                <td></td>
+                <td></td>
             </tr>
 
+            <tr>
+                <td style="font-weight: bold;">
+                    Tiết 3 <br>
+                    (9:00 - 9:45)
+                </td>
+                <td></td>
+                <td rowspan="3">
+                    PE231.Q17 - VN <br>
+                    Sĩ số: 59 <br>
+                    Giáo dục thể chất 1 <br>
+                    BĐ:08/09/25 <br>
+                    KT:27/12/25
+                </td>
+                <td></td>
+                <td></td>
+            </tr>
+
+            <tr>
+                <td style="font-weight: bold;">
+                    Tiết 4 <br>
+                    (10:00 - 10:45)
+                </td>
+                <td></td>
+                <td></td>
+                <td></td>
+            </tr>
+
+            <tr>
+                <td style="font-weight: bold;">
+                    Tiết 5 <br>
+                    (10:45 - 11:30)
+                </td>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+            </tr>
+
+            <tr>
+                <td style="font-weight: bold;">
+                    Tiết 6 <br>
+                    (13:00 - 13:45)
+                </td>
+                <td rowspan="4">
+                    IS217.Q11 - VN <br>
+                    Sĩ số: 64 <br>
+                    Kho dữ liệu và OLAP <br>
+                    P B7.06 <br>
+                    BĐ:08/09/25 <br>
+                    KT:29/11/25
+                </td>
+                <td></td>
+                <td rowspan="4">
+                    IS336.Q11 - VN <br>
+                    Sĩ số: 84 <br>
+                    Hoạch định nguồn lực doanh nghiệp <br>
+                    P C214 <br>
+                    BĐ:08/09/25 <br>
+                    KT:29/11/25
+                </td>
+                <td></td>
+                <td></td>
+                <td rowspan="5">
+                    IS207.Q13.2 - VN(HT1) - (Cách 2 tuần) <br>
+                    Sĩ số: 44 <br>
+                    Phát triển ứng dụng web <br>
+                    P B5.06 (PM) <br>
+                    BĐ:29/09/25 <br>
+                    KT:13/12/25
+                </td>
+            </tr>
+
+            <tr>
+                <td style="font-weight: bold;">
+                    Tiết 7 <br>
+                    (13:45 - 14:30)
+                </td>
+                <td></td>
+                <td></td>
+                <td></td>
+            </tr>
+
+            <tr>
+                <td style="font-weight: bold;">
+                    Tiết 8 <br>
+                    (14:30 - 15:15)
+                </td>
+                <td></td>
+                <td></td>
+                <td></td>
+            </tr>
+
+            <tr>
+                <td style="font-weight: bold;">
+                    Tiết 9 <br>
+                    (15:30 - 16:15)
+                </td>
+                <td></td>
+                <td></td>
+                <td></td>
+            </tr>
+
+            <tr>
+                <td style="font-weight: bold;">
+                    Tiết 10 <br>
+                    (16:15 - 17:00)
+                </td>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+            </tr>
+
+            <tr>
+                <td style="font-weight: bold;">
+                    Buổi tối <br>
+                    (17:45 - 20:45)
+                </td>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+            </tr>
+
+            <tr>
+                <td style="font-weight: bold;">
+                    IS336.Q11.1 - VN(HT2) <br>
+                    Sĩ số: 84 <br>
+                    Hoạch định nguồn lực doanh nghiệp <br>
+                    BĐ:22/09/25 <br>
+                    KT:27/12/25
+                </td>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+            </tr>
         </table>
     </body>
 </html>
